@@ -25,8 +25,6 @@ namespace BreakTimer.Daemon.Break {
 public abstract class BreakView : UIFragment {
     protected weak BreakController break_controller;
 
-    private int64 last_break_notification_time = 0;
-
     /** The break is active and has been given UI focus. This is the point where we start caring about it. */
     public signal void focused_and_activated ();
     /** The break has lost UI focus. We don't need to display anything at this point. */
@@ -58,86 +56,12 @@ public abstract class BreakView : UIFragment {
     }
 
     public abstract string get_status_message ();
-
     /**
-     * Each BreakView should use a single resident notification, which we
-     * update as the break's status changes. Removing the notification, at any
-     * point, should skip the break. This function is guaranteed to return a
-     * notification matching that description. Initially, it will create a
-     * new notification, and once that notification is shown it will continue
-     * to return a reference to that same notification until it is removed by
-     * the application.
-     * @see show_break_notification
-     * @see hide_notification
+     * Dismiss the break according to some user input. The BreakController
+     * may choose to skip the break, or delay it by some length of time.
      */
-    protected Notify.Notification build_common_notification (string summary, string? body) {
-        Notify.Notification notification;
-        const string icon = Config.APPLICATION_ID;
-        if (this.notification != null) {
-            notification = this.notification;
-            notification.clear_actions ();
-            notification.clear_hints ();
-            notification.update (summary, body, icon);
-        } else {
-            notification = new Notify.Notification (summary, body, icon);
-            notification.closed.connect (this.notification_closed_cb);
-        }
-        notification.set_hint ("resident", true);
-        return notification;
-    }
-
-    protected void show_break_notification (Notify.Notification notification) {
-        if (this.notifications_can_do ("actions")) {
-            /* Label for a notification action that shows information about the current break */
-            notification.add_action ("info", _("What should I do?"), this.notification_action_info_cb);
-            notification.add_action ("default", notification.summary, this.notification_action_info_cb);
-        }
-        this.show_notification (notification);
-        this.last_break_notification_time = TimeUnit.get_real_time_seconds ();
-    }
-
-    protected int seconds_since_last_break_notification () {
-        int64 now = TimeUnit.get_real_time_seconds ();
-        if (this.last_break_notification_time > 0) {
-            return (int) (now - this.last_break_notification_time);
-        } else {
-            return 0;
-        }
-    }
-
-    protected void show_break_info () {
-        GLib.AppInfo settings_app_info = new GLib.DesktopAppInfo (Config.SETTINGS_APPLICATION_ID + ".desktop");
-        GLib.AppLaunchContext app_launch_context = new GLib.AppLaunchContext ();
-        try {
-            settings_app_info.launch (null, app_launch_context);
-        } catch (GLib.Error error) {
-            GLib.warning ("Error launching settings application: %s", error.message);
-        }
-    }
-
-    protected virtual void dismiss_break () {
+    public virtual void dismiss_break () {
         this.break_controller.skip ();
-    }
-
-    private void notification_action_info_cb () {
-        GLib.Idle.add_full (
-            GLib.Priority.HIGH_IDLE,
-            () => {
-                this.show_break_info ();
-                return false;
-            }
-        );
-    }
-
-    private void notification_closed_cb () {
-        // If the notification is dismissed in a particularly forceful way, we assume the
-        // user is cutting the break short. When we're using persistent notifications,
-        // this requires the user to explicitly remove the notification with its context
-        // menu in the message tray.
-        if (this.notification.get_closed_reason () == 2 && this.notifications_can_do ("persistence")) {
-            // Notification closed reason code 2: dismissed by the user
-            this.dismiss_break ();
-        }
     }
 
     /* UIFragment interface */
